addds attribution footer

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             </main>
         </div>
 
+<footer>
+    <p class="attribution">
+        Brick wall background photo by <a href="https://unsplash.com/@wesleyphotography?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Wesley Tingey</a> on <a href="https://unsplash.com/collections/oWb1Ps7kMbc/textural?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+    </p>
+</footer>
 
 
 <script src="main-2.0-meme-gen.js"></script>
